<resources>
    <string name="app_name">Digital Money</string>
    <string name="tag_line">My Money</string>
    <string name="login_label">Login</string>
    <string name="login_go">Log In</string>
    <string name="forgot_password">New here? Sign Up</string>
    <string name="username">E-Mail</string>
    <string name="password">Password</string>
    <string name="provide_mobile">Please provide Mobile Number</string>
    <string name="provide_password">Password can not leave blank</string>
    <string name="title_activity_main">Digital Money</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="mobile">Mobile number</string>
    <string name="new_here">New here?</string>
    <string name="signUp">SignUp</string>
    <string name="signup_label">Sign Up</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="already_member">Already member?</string>
    <string name="login_here">Login here</string>
    <string name="name">Name</string>
    <string name="provide_name">Please provide your name</string>
    <string name="provide_refferal_code">Please provide referral code</string>
    <string name="mismach_password">Password mismatch</string>
    <string name="invalid_mobile">Invalid mobile number</string>
    <string name="desc_firebase_lockup">Firebase logo and name</string>
    <string name="phone_title_text">Phone Number</string>
    <string name="hint_phone_number">Phone Number</string>
    <string name="hint_verification_code">OTP Code</string>
    <string name="start_phone_auth">Start</string>
    <string name="verify_phone_auth">Verify</string>
    <string name="resend_phone_auth">Resend</string>
    <string name="sign_out">Sign Out</string>
    <string name="signed_out">Signed Out</string>
    <string name="status_code_sent">Code Sent</string>
    <string name="status_verification_failed">Verification failed</string>
    <string name="status_verification_succeeded">Verification succeeded</string>
    <string name="status_sign_in_failed">Sign-in failed</string>
    <string name="instant_validation">(instant validation)</string>
    <string name="signed_in">Signed In</string>
    <string name="firebase_status_fmt">Firebase User: %s</string>
    <string name="label_set_password">Set Password</string>
    <string name="label_create_password">CREATE PASSWORD</string>
    <string name="share_app">I found this best earning app which is give you maximum payment in short time. Join by my referral code : 500059</string>
    <string name="referral_code">Referral code</string>
    <string name="title_share">Share</string>
    <string name="title_earn_money">Earn Money</string>
    <string name="title_news">News</string>
    <string name="title_notification">Notification</string>
    <string name="title_offer">Offer</string>
    <string name="title_plan">Plan</string>
    <string name="title_referral">Referral</string>
    <string name="title_send">Send</string>
    <string name="title_support">Support</string>
    <string name="title_wallet">Wallet</string>
    <string name="task_total_impression">Total Impression</string>
    <string name="task_success_impression">Success Impression</string>
    <string name="task_install">Install</string>
    <string name="task_success_install">Success Install</string>
    <string name="default_counter">0</string>
    <string name="title_today_task">Today\'s Task</string>
    <string name="btnNext">NEXT</string>
    <string name="default_value">0</string>
    <string name="notificationIdOne">Big Offer</string>
    <string name="notificationOne"> 200 Rs ki request send karein aur paye dhero inaam</string>
    <string name="notificationIdTwo">Thanks For Using App </string>
    <string name="notificationTwo">Appki request jald se jald approve kar di jayegi</string>
    <string name="notificationIdThree">Big Offer News</string>
    <string name="notificationThree">When you show longer text in notification message, you can notice that the text is stripped away. So if want to show the full text in multiple lines</string>
    <string name="notificationIdFour">General LINE Notification Settings</string>
    <string name="notificationFour">Rich HTML provides additional control over line breaks in your email notifications and templates. To accommodate this, a Newlines to HTML check box is</string>
    <string name="balance">BALANCE</string>
    <string name="wallet_balance">####</string>
    <string name="redeem">Redeem</string>
    <string name="amount">Amount</string>
    <string name="wallet_balance_2">00.00</string>
    <string name="enter_paytm_mobile_number">Enter Paytm Mobile Number</string>
    <string name="select_qr_code">Select Your Paytm QR Code</string>
    <string name="submit">Submit</string>
    <string name="email">Email</string>
    <string name="provide_detail">Provide Details</string>
    <string name="save">Save</string>
    <string name="provide_email">Provide emailId</string>
    <string name="provide_valid_mobile">Provide a valid mobile number</string>
    <string name="label_referral_code">Referral Code: 500059</string>
    <string name="terms_condition">This following sets out the terms and conditions on which you may use the content on business-standard.com website, business-standard.com\'s mobile browser site</string>
    <string name="bottom_terms">We welcome users to register on our digital platforms. We offer the below mentioned registration services which may be subject to change in the future. All changes will be appended in the terms and conditions page and communicated to existing users by email.</string>
    <string name="nothing_to_show">There is nothing to show</string>

    <string name="provide_notification_title">Please provide title of the notification</string>
    <string name="provide_notification_description">Please provide description of the notification</string>
    <string name="added_successfully">Notification Added Successfully</string>
    <string name="addedion_failed">Sorry! Could not add notification</string>

    <string name="impossible_game">Impossible Game</string>
    <string name="retry_button_text">Retry</string>
    <string name="watch_video_button_text">Watch Video for 10 additional coins</string>
    <string name="default_coin_text">Coins: 0</string>
    <string name="title_signup">Signup</string>
    <string name="title_login">Login</string>
    <string name="todo">TODO</string>
    <string name="task_start">Start</string>
    <string name="add_notification">Add Notification</string>
    <string name="add_task">Add Task</string>
    <string name="add_task_completion_in_percengage">Add Task Completion in Percengage</string>
    <string name="add_media">Add Media</string>
    <string name="title_admin">Admin</string>


    <array name="icons">
        <item>@drawable/ic_twitter</item>
        <item>@drawable/ic_facebook</item>
        <item>@drawable/ic_whatsapp</item>
        <item>@drawable/ic_gmail</item>
        <item>@drawable/if_google_plus</item>
    </array>

    <array name="colors">
        <item>@android:color/holo_blue_light</item>
        <item>@android:color/holo_green_dark</item>
        <item>@android:color/holo_red_light</item>
        <item>@android:color/holo_purple</item>
        <item>@android:color/holo_orange_light</item>
    </array>


    <color name="blueStart">#4EFFF3</color>
    <color name="blueEnd">#0ca6f9</color>
    <color name="purpleStart">#a369ff</color>
    <color name="purpleEnd">#0e56ff</color>
    <color name="roseStart">#FF6A00</color>
    <color name="roseEnd">#ef0276</color>
    <color name="greenStart">#a7f56e</color>
    <color name="greenEnd">#11c612</color>


    <string name="title_activity_interstial">efnefnefnoiefnoie</string>


    <!-- -
        This is an ad unit ID for an interstitial test ad. Replace with your own interstitial ad unit id.
        For more information, see https://support.google.com/admob/answer/3052638
    <!- -->
    <string name="video_ad_unit_id">ca-app-pub-1594372409902675/9435164874</string>
    <string name="video_ad_unit_name">digital_money_video_android_ad_id</string>
    <string name="app_id">ca-app-pub-1594372409902675/9435164874</string>
    <string name="interstitial_ad_unit_id">ca-app-pub-1594372409902675/3925362484</string>
    <string name="interstitial_ad_unit_name">digital money Interstitial ad id</string>
    <string name="banner_ad_unit_id">ca-app-pub-1594372409902675/8010402569</string>
    <string name="banner_ad_app_name">digital money banner ad id</string>
    <string name="next_level">Next</string>
    <string name="invitation_deep_link">https://dgitalmoney.com/welcome</string>
    <string name="invitation_custom_image">http://www.italypokerdeals.com/images/skrill-send-money.png</string>
    <string name="provide_valid_email">Provide a valid email</string>
    <string name="register">Register</string>
    <string name="do_not_have_user_account">Don\'t have user account</string>
    <string name="provide_referral_code">Provide referral code</string>
    <string name="update_profile">Update Profile</string>
    <string name="invite_title_message">Just invited you to Install Digital Money. Join and earn free in your wallet- Install now</string>
    <string name="address">Address</string>
    <string name="not_available">Not available</string>




    <!--Paytm integration-->


    <string name="order_id">Order Id : </string>
    <string name="customer_id">Customer Id : </string>
    <string name="transaction_amount">Transaction Amount : </string>
    <string name="channel_id">Channel Id : </string>
    <string name="industry_type_id">Industry Type Id : </string>
    <string name="website">Website : </string>
    <string name="theme">Theme : </string>
    <string name="cust_email_id">Email Id : </string>
    <string name="cust_mobile_no">Mobile Number : </string>
    <string name="merchant_id">Merchant Id : </string>
    <string name="checksum_generation_url">Checksum Generation URL : </string>
    <string name="checksum_verification_url">Checksum Verification URL : </string>
    <string name="start_transaction">Start Transaction</string>
    <string name="sample_order_id">ORDER</string>
    <string name="sample_customer_id">CUST23657</string>
    <string name="sample_transaction_amount">1</string>
    <string name="sample_channel_id">WAP</string>
    <string name="sample_industry_type_id">Retail</string>
    <string name="sample_website">worldpressplg</string>
    <string name="sample_theme">merchant</string>
    <string name="sample_cust_email_id">abc@gmail.com</string>
    <string name="sample_cust_mobile_no">123</string>
    <string name="sample_merchant_id_staging">WorldP64425807474247</string>
    <string name="sample_checksum_generation_url">https://pguat.paytm.com/merchant-chksum/ChecksumGenerator</string>
    <string name="sample_checksum_verification_url">https://pguat.paytm.com/merchant-chksum/ValidateChksum</string>


</resources>
