<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background">


    <LinearLayout
        android:id="@+id/main_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_centerInParent="true"
        android:background="@drawable/circle_background"
        android:paddingBottom="40sp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingTop="40dp"
        android:layout_margin="@dimen/activity_horizontal_margin"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/ivLogo"
            android:layout_width="80sp"
            android:layout_height="80sp"
            android:layout_marginBottom="@dimen/activity_horizontal_margin"
            android:background="@drawable/ic_wallet_white" />


        <EditText
            android:id="@+id/field_phone_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_phone_number"
            android:background="@drawable/circle_background"
            android:drawableLeft="@drawable/ic_phone"
            android:textColor="@color/colorWhite"
            android:textColorHint="@color/colorWhite"
            android:drawablePadding="@dimen/activity_horizontal_margin"
            android:padding="@dimen/nav_header_vertical_spacing"
            android:inputType="phone" />

        <EditText
            android:id="@+id/field_verification_code"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/nav_header_vertical_spacing"
            android:textColor="@color/colorWhite"
            android:textColorHint="@color/colorWhite"
            android:drawableLeft="@drawable/ic_code"
            android:drawablePadding="@dimen/activity_horizontal_margin"
            android:background="@drawable/circle_background"
            android:padding="@dimen/nav_header_vertical_spacing"
            android:hint="@string/hint_verification_code"
            android:inputType="number" />

        <Button
            android:id="@+id/button_start_verification"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/start_phone_auth"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold"
            android:layout_marginTop="@dimen/activity_horizontal_margin"
            android:theme="@style/ThemeOverlay.MyDarkButton" />

        <Button
            android:id="@+id/button_verify_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold"
            android:text="@string/verify_phone_auth"
            android:theme="@style/ThemeOverlay.MyDarkButton" />

        <Button
            android:id="@+id/button_resend"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold"
            android:text="@string/resend_phone_auth"
            android:theme="@style/ThemeOverlay.MyDarkButton" />

    </LinearLayout>


    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="gone"/>


</RelativeLayout>
