<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">


    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/tvWallet"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/balance"
                    android:padding="35sp"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"
                    android:layout_centerHorizontal="true" />


                <TextView
                    android:id="@+id/tvWalletMoney"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/wallet_balance"
                    android:textStyle="bold"
                    android:textSize="30sp"
                    android:layout_alignParentEnd="true"
                    android:padding="35sp"
                    android:layout_centerVertical="true"
                    android:layout_centerHorizontal="true" />

            </RelativeLayout>

            <Button
                android:id="@+id/btnRedeem"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/redeem"
                android:textColor="@color/colorWhite"
                android:textAppearance="?android:textAppearanceMedium"
                android:background="@color/colorPrimary"/>

        </LinearLayout>
    </android.support.v7.widget.CardView>


        <android.support.design.widget.TabLayout
            android:id="@+id/tabs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:tabMode="fixed"
            android:layout_marginTop="@dimen/nav_header_vertical_spacing"
            android:background="@color/transparent"
            android:minHeight="?attr/actionBarSize"
            app:tabGravity="fill"
            app:tabTextColor="#FFF"
            app:tabSelectedTextColor="@color/colorAccent"/>


        <android.support.v4.view.ViewPager
            android:id="@+id/pagerWallet"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>



</LinearLayout>